--- a/main.html
+++ b/main.html
@@ -53,11 +53,13 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                 </div>
                 <div class="modal-body">
-                    <img src="img/covid.png" alt="" style="max-height: 400px; padding-top: 50px;" class="img-fluid">
+                    <div class="text-center">
+                        <img src="img/covid.png" alt="" style="max-height: 400px; padding-top: 50px;" class="img-fluid">
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -172,12 +174,10 @@
 
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-8">
-                        <div class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100">
-                            <p>"Demikian mereka bukan lagi dua melakukan satu. Karena itu apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia" <br>(Matthew/Matius 19 : 6 )<br>
-                            </p>
-                        </div>
+                <div class="col-md-8">
+                    <div class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100">
+                        <p>"Demikian mereka bukan lagi dua melakukan satu. Karena itu apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia" <br>(Matthew/Matius 19 : 6 )<br>
+                        </p>
                     </div>
                 </div>
                 <!--/.row -->
@@ -341,7 +341,6 @@
             </div>
         </div>
     </section>
-
 
     <script>
         AOS.init();
