--- a/main.html
+++ b/main.html
@@ -149,7 +149,7 @@
                                 Putri dari
                             </h3>
                             <h1>
-                                Bapak Miskanto (Alm.)<br>&<br>Ibu Atik Sudarwati
+                                Bpk. Miskanto (Alm.)<br>&<br>Ibu Sudarwati
                             </h1>
                         </div>
                     </div>
@@ -169,14 +169,14 @@
                             <h3>
                                 Putra dari
                             </h3>
-                            <h1>Bapak Heri Hadijono<br>&<br>Ibu Lian Hwa</h1>
+                            <h1>Bpk. Heri Hadijono<br>&<br>Ibu Lian Hwa</h1>
                         </div>
 
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100">
-                        <p>"Demikian mereka bukan lagi dua melakukan satu. Karena itu apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia" <br>(Matthew/Matius 19 : 6 )<br>
+                        <p>"Demikian mereka bukan lagi dua melakukan satu. Karena itu apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia" <br>(Matius 19 : 6 )<br>
                         </p>
                     </div>
                 </div>
@@ -237,35 +237,18 @@
                 </div>
                 <div class="col-md-12">
                     <!-- Gallery -->
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/galeri/galeri_1.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/galeri/galeri_2.jpg" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/galeri/galeri_3.jpg" alt="Third slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/galeri/galeri_4.jpg" alt="Third slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/galeri/galeri_5.jpg" alt="Third slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/galeri/galeri_6.jpg" alt="Third slide">
-                            </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 col-md-12 mb-4 mb-lg-0">
+                            <img src="img/galeri/galeri_1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+
+                            <img src="img/galeri/galeri_2.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+
+                        <div class="col-lg-8 mb-4 mb-lg-0">
+                            <img src="img/galeri/galeri_3.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+
+                            <img src="img/galeri/galeri_4.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                        </div>
                     </div>
                     <!-- Gallery -->
                 </div>
@@ -283,14 +266,55 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <form style="color:white" action="contactform/contactform.php" method="POST">
+                        <div class="text-center">
+                            <h1 class="title-section" style="color:white">Ucapan & Doa</h1>
+                        </div>
+                        <form style="color:white" action="#" method="POST">
                             <div class="form-group">
                                 <label for="name">Nama</label>
                                 <input style="font-size: 10pt;" type="text" name="name" class="form-control" id="name" placeholder="Masukan Nama..." />
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input style="font-size: 10pt;" type="email" name="email" class="form-control" id="email" placeholder="Masukan Email..." />
+                                <label for="message">Harapan</label>
+                                <textarea class="form-control" style="font-size: 10pt;" name="message" id="message" placeholder="Harapan untuk pengantin berdua" rows="5"></textarea>
+                            </div>
+                            <div class="text-center">
+                                <input type="submit" class="btn btn-lg btn-secondary" value="Kirim Ucapan & Doa">
+                            </div>
+                        </form>
+                        <br>
+                        <br>
+                        <div class="table-wrapper-scroll-y my-custom-scrollbar">
+                            <table class="table mb-0">
+                                <tbody>
+                                    <tr>
+                                        <td><img src="img/icons/wishes.svg" class="img-fluid" alt=""></td>
+                                        <td>
+                                            Kiki <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint nihil, debitis, nemo maiores officia vitae molestias ipsam nobis itaque nesciunt minus tenetur suscipit facilis dolores ratione eos deserunt
+                                            sapiente culpa.
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><img src="img/icons/wishes.svg" class="img-fluid" alt=""></td>
+                                        <td>
+                                            Kiki <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint nihil, debitis, nemo maiores officia vitae molestias ipsam nobis itaque nesciunt minus tenetur suscipit facilis dolores ratione eos deserunt
+                                            sapiente culpa.
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <br><br>
+                        <hr style="color:white;">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="text-center">
+                            <h1 class="title-section" style="color:white">Reservasi</h1>
+                        </div>
+                        <form style="color:white" action="#" method="POST">
+                            <div class="form-group">
+                                <label for="name">Nama</label>
+                                <input style="font-size: 10pt;" type="text" name="name" class="form-control" id="name" placeholder="Masukan Nama..." />
                             </div>
                             <div class="form-group">
                                 <label for="whatsapp">Whatsapp</label>
@@ -298,8 +322,8 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="message">Pesan</label>
-                                <textarea class="form-control" style="font-size: 10pt;" name="message" id="message" placeholder="Masukan Pesan..." rows="5"></textarea>
+                                <label for="message">Harapan</label>
+                                <textarea class="form-control" style="font-size: 10pt;" name="message" id="message" placeholder="Harapan untuk pengantin berdua" rows="5"></textarea>
                             </div>
                             <div class="form-group">
                                 <label for="">Konfirmasi Kehadiran</label>
@@ -320,10 +344,11 @@
                                 <label for=""> 3</label><br>
                             </div>
                             <div class="text-center">
-                                <input type="submit" class="btn btn-lg btn-secondary" value="Kirim">
+                                <input type="submit" class="btn btn-lg btn-secondary" value="Kirim Reservasi">
                             </div>
-
                         </form>
+                        <br><br>
+                        <hr style="color: white;">
                     </div>
                     <div class="col-md-8">
                         <div class="text-center">
