update kami yg berbahagia

--- a/main.html
+++ b/main.html
@@ -351,6 +351,23 @@
                         <hr style="color: white;">
                     </div>
                     <div class="col-md-8">
+                        <div class="text-center" style="color: white;">
+                            <h1 class="title-section" style="color: white;">Kami Yang Berbahagia</h1>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <p style="color: white;">Kel. Bpk. Miskanto (Alm)<br>Ibu Sudarwati</p>
+                                </div>
+                                <div class="col-md-2">
+                                    <p>&</p>
+                                </div>
+                                <div class="col-md-5">
+                                    <p style="color: white;">Kel. Bpk Heri Hadijono<br>Ibu Lian Hwa</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
                         <div class="text-center">
                             <br><br>
                             <a href="https://www.instagram.com/towerbarat.creative/">
@@ -362,6 +379,8 @@
             </div>
         </div>
     </section>
+
+
 
     <script>
         AOS.init();
